--- a/Isabel_BAW Day 1 Activity.html
+++ b/Isabel_BAW Day 1 Activity.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html>
     <head>
-        <title>Introducing Isabel</title>
+        <title>Hello world!</title>
         <link type="text/css" rel="stylesheet" href="Isabel_BAW Day 1 Activity.css">
         <style>
             h1 {
